# librazer

./: .gitignore  CMakeLists.txt  librazer.pro  readme.txt  sublime.sublime-project  sublime.sublime-workspace
aion/: readme.txt
aion/scripts/: a.ae
aion/src/: aeon_type_utils.cpp  loader_main.cpp
aionc/: aeonc.cpp  aeonc.h  livecore.cpp  livecore.h
demo/: myApp.app
demo/sample_app/: loader.ds  main.ds  player.ds
doc/: Building.md  CodeConvention.md  Execution.txt  KNOWN_ISSUES  RazerCommand.txt  RazerCore.txt  TODO.txt  VM_Development.md  destructuring_exprs.md  grammar.txt  integration_tests.txt  technical_auto_containers.md
doc/feature_samples/: SeparatorOmission.aeon  anonymous_subobject.md  emit_generative_code.md  imperative_new.md  nullable.md  property_bindings.md  right_hand_attributes.md  syntax_introspection.md  template_class.md  virtual_methods.md
doc/features/: DynamicallyBoundCalls.txt  RightHandedAttributes.txt  SeparatorOmission.aeon  dependency_injection.md  inner_factories.md  static_constructor.md  static_introspection.md  zero_verbosity.md
doc/incubator/: todos.rz
doc/temp/: AST MACROS  Immutables.md  RAZER MOTIVATIONS  RavenIR  Readme.md  ViewSpec.md  alloc_interception.md  coroutine.cpp  decl test  declarative games  handle_ptr  handle_ptr.cpp  idea_domain_modelling_middleware_c++.md  injection.rz  macros.md  proposal_domain.md  proposal_functional_operations.md  proposal_implicit_dependency.md  proposal_indexed_lifetime.md  proposal_initial_construction.md  proposal_traits.md  proposal_unions.md  razer ideas.txt  reflective.md  rxsl_sample.rs
include/AEON/: AEContext.h  AEModule.h  registration.h
include/Rzr/: RzDocument.h  RzEngine.h  RzModule.h  RzValue.h
include/RzrAPI/: RzBuilder.cpp  RzBuilder.h
lang_tests/: arithmetic.ae
lang_tests/modules/: modules.aepro
sdk/: CMakeLists.txt
src/: 02nd2w5w.gqf  033ldvcq.a1p  0y2akcux.24w  1f2qhh5i.wnn  1ogtwu1s.fyd  3r4fktb3.bwu  BuildReport.cpp  BuildReport.h  DebugDefs.h  Logger.cpp  Logger.h  adplhvrm.ola  aeBindingHelper.h  aeClosure.h  aeCodeFile.cpp  aeCompilerConv.cpp  aeCompilerConv.h  aeDynamicType.cpp  aeNodeNew.cpp  aeNodeNew.h  aeQualType.cpp  aeQualType.h  aeReportManager.cpp  aeReportManager.h  aeUnit.h  aeon.cpp  aeon_bytecode.cpp  aeon_bytecode.h  aeon_compiler.cpp  aeon_compiler.h  aeon_compiler_expressions.cpp  aeon_context.cpp  aeon_context.h  aeon_expression.cpp  aeon_expression.h  aeon_generics.cpp  aeon_generics.h  aeon_ir.h  aeon_lexer.cpp  aeon_lexer.h  (+65 more)
src/Base/: FileUtils.cpp  StringUtils.cpp
src/RazerBuild/: RzBuilder.cpp  RzBuilder.h
src/RazerCompiler/: AECompiler.cpp  AECompiler.h  AECompilerData.cpp  BuildReport.cpp  BuildReport.h  CompileAllocation.cpp  CompileAssignment.cpp  CompileCalls.cpp  CompileExpressions.cpp  CompileFunctions.cpp  CompileResult.cpp  CompileResult.h  Errors.cpp  OverloadResolver.cpp  OverloadResolver.h  RzCompiler.cpp  RzCompiler.h  RzCompilerCollect.cpp  SymbolTypename.cpp  TypeResolver.cpp  ir.cpp  (+5 more)
test/: CMakeLists.txt  README.md  test.ae  test.pro  test_binding.cpp  test_engine.cpp  test_framework.h  unit_tests.pro  value_test.cpp
test/integration_test/: int1.rz  integration_tests.cpp
test/parser_test/: parser_test.cpp  parser_test.h
test/src/: parser_test.cpp  test_binding.cpp  test_engine.cpp  value_test.cpp  value_test.h
test/src/vm/: vmtest.cpp
test/utils/: main.cpp  test_framework.cpp  test_framework.h
test/vm_test/: value_test.cpp
testbed/: Chrono.rz  ex1.rz  irtest.rz  main.rz  module_test.rz  pong.rz  snake.rz  syntax.rz  templates.rz  testbed.pro
upcoming/: DynamicallyBoundCalls.aeon  RightHandedAttributes.aeon  SeparatorOmission.txt
(+597 files in other folders)
